Fix header layout on mobile. Menu button was moved down below site title and the button text was corrected. Padding and margins reduced to give more space to images.

--- a/sass/layout/_global.scss
+++ b/sass/layout/_global.scss
@@ -1,5 +1,5 @@
 .site-content {
-	padding: 1em;
+	padding: 0em .5em;
 	
 	@media screen and (min-width: $query__small) {
 		padding: 2em;
