--- a/sass/site/header/_header-menu.scss
+++ b/sass/site/header/_header-menu.scss
@@ -86,12 +86,10 @@ button.dropdown-toggle {
 }
 
 .menu-toggle {
-	position: absolute;
-	top: 0;
-	right: 0;
+	position: relative;
 	display: block;
-	margin: 1.2em 1.2em 0 0;
-	padding: .6em .8em;
+	margin: 1em auto;
+	padding: 1em 1.5em;
 	font-size: 80%;
 	text-transform: uppercase;
 	color: white;
