--- a/sass/site/header/_header.scss
+++ b/sass/site/header/_header.scss
@@ -1,7 +1,7 @@
 
 .site-header {
 	position: relative;
-	padding: 1em;
+	padding: 1em 1em 0 1em;
 	font-family: $font__sans;
 	color: #fff;
 	background-color: $color__skin;
