--- a/sass/site/primary/_posts-and-pages.scss
+++ b/sass/site/primary/_posts-and-pages.scss
@@ -29,7 +29,7 @@
 
 .entry-title {
 	margin: .123em 0 .25em;
-	font-size: 2.5em;
+	font-size: 2em;
 	color: lightgrey;
 
 	@media screen and (min-width: $query__medium) {
@@ -75,7 +75,7 @@
 .page-content,
 .entry-content,
 .entry-summary {
-	margin: 1.5em 0 0;
+	margin: 0.8em 0 0;
 }
 
 .page-links {
