--- a/style.css
+++ b/style.css
@@ -259,7 +259,6 @@ th {
 # Typography
 --------------------------------------------------------------*/
 body,
-button,
 input,
 select,
 textarea {
@@ -272,7 +271,6 @@ textarea {
 
 @media screen and (min-width: 600px) {
 	body,
-	button,
 	input,
 	select,
 	textarea {
@@ -828,7 +826,7 @@ a:hover, a:active {
 ## Global layouts
 --------------------------------------------------------------*/
 .site-content {
-	padding: 1em;
+	padding: 0em .5em;
 }
 
 @media screen and (min-width: 600px) {
@@ -852,7 +850,7 @@ a:hover, a:active {
 --------------------------------------------------------------*/
 .site-header {
 	position: relative;
-	padding: 1em;
+	padding: 1em 1em 0 1em;
 	font-family: "Source Sans Pro", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Geneva, Arial, sans-serif;
 	color: #fff;
 	background-color: #151515;
@@ -1001,12 +999,10 @@ button.dropdown-toggle {
 }
 
 .menu-toggle {
-	position: absolute;
-	top: 0;
-	right: 0;
+	position: relative;
 	display: block;
-	margin: 1.2em 1.2em 0 0;
-	padding: .6em .8em;
+	margin: 1em auto;
+	padding: 1em 1.5em;
 	font-size: 80%;
 	text-transform: uppercase;
 	color: white;
@@ -1094,7 +1090,7 @@ button.dropdown-toggle {
 
 .entry-title {
 	margin: .123em 0 .25em;
-	font-size: 2.5em;
+	font-size: 2em;
 	color: lightgrey;
 }
 
@@ -1141,7 +1137,7 @@ button.dropdown-toggle {
 .page-content,
 .entry-content,
 .entry-summary {
-	margin: 1.5em 0 0;
+	margin: 0.8em 0 0;
 }
 
 .page-links {
